--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Andre Dias Sousa</h1>
-        <img src="./assets/images/profile_picture.jpg" height="200"/>
+        <img src="./assets/images/profile_picture.jpg" height="200" alt="An adult man wearing black clothes hiding your face with a hang loose"/>
 
         <hr />
 
